# AdventofCode2024

./: Cargo.toml  README.md
inputs/: tekst.txt  test.txt
src/: day10.rs  day10a.rs  day10b.rs  day11.rs  day11b.rs  day12.rs  day12b.rs  day1b.rs  day2.rs  day2b.rs  day3.rs  day3b.rs  day4.rs  day4b.rs  day5.rs  day5b.rs  day6.rs  day6b.rs  day6b2.rs  day7.rs  day7b.rs  day8.rs  day8b.rs  day9.rs  day9b.rs  main.rs
