[package]
name = "AoC24"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
fancy-regex = "0.14.0"

[[bin]]
name = "day2"
path = "src/day2.rs"

[[bin]]
name = "day1b"
path = "src/day1b.rs"
[[bin]]
name = "day2b"
path = "src/day2b.rs"
[[bin]]
name = "day3"
path = "src/day3.rs"
[[bin]]
name = "day3b"
path = "src/day3b.rs"